Fixing a problem that was causing Cut and Copy actions to be permanently grayed out after using the konqueror's combobox history.

As it turns out, a line edit embedded in a combo box does not receive
focus events, even though it should (and konqueror was relying on this).
Changed the code to react on the combo box' focus events, and everything
works well now.

BUG: 172014


svn path=/trunk/KDE/kdebase/apps/; revision=868121